Fix IG-2194 [General] Number input arrows visual bug on Firefox (#528)

--- a/src/igz_controls/components/number-input/number-input.less
+++ b/src/igz_controls/components/number-input/number-input.less
@@ -53,7 +53,6 @@
         padding: 0;
         text-align: left;
         background-color: @number-input-field-bg-color;
-        width: 100%;
     }
 
     .additional-left-block {
